Jos neke crud operacije i anotacije za njih
