# app/Models/RoleHotelUser.php
@@ -5,6 +5,23 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
+/**
+ * @OA\Schema(
+ *     schema="RoleHotelUser",
+ *     required={"role_id", "hotel_user_id"},
+ *     @OA\Property(
+ *         property="role_id",
+ *         type="integer",
+ *         description="The ID of the role"
+ *     ),
+ *     @OA\Property(
+ *         property="hotel_user_id",
+ *         type="integer",
+ *         description="The ID of the hotel user"
+ *     )
+ * )
+ */
+
 class RoleHotelUser extends Model
 {
     use HasFactory;
@@ -23,5 +40,5 @@ class RoleHotelUser extends Model
     {
         return $this->belongsTo(HotelUser::class, 'hotel_user_id', 'id');
     }
-    
+
 }
